<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Playboard">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/tile0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty" />

        <ImageButton
            android:id="@+id/tile1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty" />

        <ImageButton
            android:id="@+id/tile2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty" />

        <ImageButton
            android:id="@+id/tile3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty" />

        <ImageButton
            android:id="@+id/tile4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty" />

        <ImageButton
            android:id="@+id/tile5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty" />

        <ImageButton
            android:id="@+id/tile6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageButton
            android:id="@+id/tile7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageButton
            android:id="@+id/tile8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="2"
            app:layout_row="1" />

        <ImageButton
            android:id="@+id/tile9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="3"
            app:layout_row="1" />

        <ImageButton
            android:id="@+id/tile10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="4"
            app:layout_row="1" />

        <ImageButton
            android:id="@+id/tile11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="5"
            app:layout_row="1" />

        <ImageButton
            android:id="@+id/tile12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageButton
            android:id="@+id/tile13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="1"
            app:layout_row="2" />

        <ImageButton
            android:id="@+id/tile14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="2"
            app:layout_row="2" />

        <ImageButton
            android:id="@+id/tile15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="3"
            app:layout_row="2" />

        <ImageButton
            android:id="@+id/tile16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="4"
            app:layout_row="2" />

        <ImageButton
            android:id="@+id/tile17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="5"
            app:layout_row="2" />

        <ImageButton
            android:id="@+id/tile18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="0"
            app:layout_row="3" />

        <ImageButton
            android:id="@+id/tile19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="1"
            app:layout_row="3" />

        <ImageButton
            android:id="@+id/tile20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="2"
            app:layout_row="3" />

        <ImageButton
            android:id="@+id/tile21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="3"
            app:layout_row="3" />

        <ImageButton
            android:id="@+id/tile22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="4"
            app:layout_row="3" />

        <ImageButton
            android:id="@+id/tile23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="5"
            app:layout_row="3" />

        <ImageButton
            android:id="@+id/tile24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="0"
            app:layout_row="4" />

        <ImageButton
            android:id="@+id/tile25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="1"
            app:layout_row="4" />

        <ImageButton
            android:id="@+id/tile26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="2"
            app:layout_row="4" />

        <ImageButton
            android:id="@+id/tile27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="3"
            app:layout_row="4" />

        <ImageButton
            android:id="@+id/tile28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="4"
            app:layout_row="4" />

        <ImageButton
            android:id="@+id/tile29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="5"
            app:layout_row="4" />

        <ImageButton
            android:id="@+id/tile30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="0"
            app:layout_row="5" />

        <ImageButton
            android:id="@+id/tile31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="1"
            app:layout_row="5" />

        <ImageButton
            android:id="@+id/tile32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="2"
            app:layout_row="5" />

        <ImageButton
            android:id="@+id/tile33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="3"
            app:layout_row="5" />

        <ImageButton
            android:id="@+id/tile34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="4"
            app:layout_row="5" />

        <ImageButton
            android:id="@+id/tile35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:src="@drawable/empty"
            app:layout_column="5"
            app:layout_row="5" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/turnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/turnName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameView" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:enabled="false"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turnView" />

    <TextView
        android:id="@+id/usernameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>